--- a/package.json
+++ b/package.json
@@ -17,7 +17,6 @@
     "axios": "0.18.1",
     "babel-plugin-import": "^1.13.3",
     "core-js": "3.6.5",
-    "element-ui": "2.13.2",
     "js-cookie": "2.2.0",
     "normalize.css": "7.0.0",
     "nprogress": "0.2.0",
@@ -25,7 +24,9 @@
     "vant": "^2.12.7",
     "vue": "2.6.10",
     "vue-router": "3.0.6",
-    "vuex": "3.1.0"
+    "vuex": "3.1.0",
+    "vxe-table": "^3.1.7",
+    "xe-utils": "^3.1.8"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "4.4.4",
